styles.css
/* I did not add the hamburger icon to the html becaause we were not instructed to touch the HTML file*/

@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Rubik", sans-serif;
}
div.nav-bar {
  display: flex;
  justify-content: space-between;
  padding: 1rem 6rem;
  width: 100vw;
  background: #304353;
}

div.logo {
  font-size: 1.5rem;
  color: #bcc3c7;
}

ul.nav-links {
  display: flex;
  margin: 0;
  padding: 0;
}

ul li {
  margin: 0 2vw;
  list-style: none;
  font-size: 1.1rem;
}

ul li a {
  text-decoration: none;
  color: #88949b;
  padding: 0.5vw;
}

ul li a:hover {
  color: #304353;
  background: #fff;
  padding: 0.5rem;
}

div.hero-section {
  background: #304353;
  padding: 10rem;
}

div.hero-content-heading {
  text-align: center;
}

div.hero-content-heading h3 {
  font-size: 2rem;
  text-transform: uppercase;
  letter-spacing: 2px;
  font-weight: 300;
  color: #bcc3c7;
}

div.hero-content-heading p {
  text-align: center;
  padding-top: 0.7rem;
  color: #88949b;
  font-size: 1rem;
  letter-spacing: 2px;
  font-weight: 300;
}

div.hero-content-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-top: 2rem;
}

div.hero-content-btn a {
  background: #e44c65;
  text-decoration: none;
  color: #bcc3c7;
  font-size: 0.9rem;
  padding: 10px 30px;
  border-radius: 3px;
  letter-spacing: 2px;
}

div.hero-background {
  background: #f0f0f0;
  padding: 10rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

div.background {
  background: #fff;
  box-shadow: 2px 2px 15px 0 rgb(135 135 135 / 40%);
  padding: 15px 40px;
  width: 550px;
  height: 220px;
  position: relative;
}

div.background h4 {
  padding: 2rem;
  color: #555657;
  font-size: 1rem;
  letter-spacing: 2px;
  text-transform: uppercase;
}

div.background p {
  color: #a6a5aa;
  padding-left: 2rem;
  font-size: 0.8rem;
  letter-spacing: 2px;
}

div.hero-background-pos {
  position: absolute;
  right: 0px;
  left: 66%;
  background: #fff;
  width: 140px;
  height: 140px;
  border-radius: 50%;
  box-shadow: 2px 2px 15px 0 rgb(135 135 135 / 40%);
}

div.snapshot-team {
  background: #f0f0f0;
  text-align: center;
  padding-top: 2rem;
}

div.snapshot-team h2 {
  color: #555657;
  font-size: 1.5rem;
  letter-spacing: 2px;
  text-transform: uppercase;
}

div.snapshot-team p {
  color: #a6a5aa;
  font-size: 1rem;
  letter-spacing: 2px;
  padding-top: 0.8rem;
}

div.snapshot-box {
  display: flex;
  justify-content: center;
  align-items: center;
  background: #f0f0f0;
  padding: 4rem 6rem;
}

div.snapshot-box-content {
  display: flex;
  justify-content: space-between;
}

div.box1 {
  background: #fff;
  padding: 10px 20px;
  width: 220px;
  height: 230px;
  margin: 10px;
  border-radius: 2px;
  box-shadow: 2px 2px 15px 0 rgb(135 135 135 / 40%);
}

div.box3 {
  background: #304353;
  padding: 10px 20px;
  width: 220px;
  height: 230px;
  margin: 10px;
  border-radius: 2px;
  box-shadow: 2px 2px 15px 0 rgb(135 135 135 / 40%);
}

div.box3 h5 {
  text-align: center;
  padding-top: 2rem;
  color: #e44c65;
  font-size: 1rem;
}

div.circle {
  display: flex;
  margin: 0 auto;
  width: 90px;
  height: 90px;
  border-radius: 50%;
  background: #bcc3c7;
  margin-top: 2rem;
}

div.box1 h5 {
  text-align: center;
  padding-top: 2rem;
  color: #e44c65;
  font-size: 1rem;
}

div.gallery-section {
  background: #fff;
  padding: 4rem;
}

div.gallery-content {
  text-align: center;
}

div.gallery-content h4 {
  color: #555657;
  font-size: 1.5rem;
  letter-spacing: 2px;
  text-transform: uppercase;
}

div.gallery-content p {
  color: #a6a5aa;
  font-size: 1rem;
  letter-spacing: 2px;
  padding-top: 0.8rem;
}

div.gallery-img {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding-top: 3rem;
}

div.img {
  margin: 10px;
}

div.img img {
  width: 250px;
  height: 180px;
}

div.footer {
  background: #304353;
  padding: 3rem;
}

div.footer-content {
  text-align: center;
}

div.footer-content h4 {
  color: #bcc3c7;
  font-size: 1.5rem;
  letter-spacing: 2px;
  text-transform: uppercase;
}

div.footer-content p {
  color: #88949b;
  font-size: 1rem;
  letter-spacing: 2px;
  padding-top: 0.8rem;
}

div.footer-input {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-top: 3rem;
}

input[type="text"] {
  margin-right: 10px;
  padding: 10px 20px;
  width: 25%;
  outline: none;
  border: 1px solid #bcc3c7;
  background: transparent;
  color: #f0f0f0;
  font-size: 1rem;
  border-radius: 2px;
}

input[type="email"] {
  margin-right: 10px;
  padding: 10px 20px;
  width: 25%;
  outline: none;
  border: 1px solid #bcc3c7;
  background: transparent;
  color: #f0f0f0;
  font-size: 1rem;
  border-radius: 2px;
}

::placeholder {
  color: #a6a5aa;
}

div.footer-textarea {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-top: 2rem;
}

textarea {
  width: 51%;
  height: 150px;
  padding: 0.5rem;
  outline: none;
  border: 1px solid #bcc3c7;
  background: transparent;
  color: #f0f0f0;
}

div.footer-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-top: 2rem;
}

div.footer-btn a {
  background: #e44c65;
  text-decoration: none;
  color: #f0f0f0;
  font-size: 0.9rem;
  padding: 10px 50px;
  border-radius: 3px;
  letter-spacing: 2px;
}

div.footer h6 {
  text-align: center;
  color: #88949b;
  font-size: 1rem;
  padding-top: 6rem;
}
@media only screen and (max-width: 600px) {
  /* top navigation */
  div.nav-bar {
    padding: 7px 5px;
  }

  div.logo {
    font-size: 1.15rem;
  }
  ul {
    height: 40px;
    width: 40px;
    background: url("icons8-menu-26.png");
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
  }
  ul:hover {
    background: #304353;
    display: block;
  }
  ul:hover a {
    display: block;
  }
  ul li a {
    display: none;
  }
  ul li a:hover {
    padding: 0.45rem;
  }
  ul li {
    margin: 0 0.4vw;
    font-size: 0.7rem;
  }
  /* hero section */

  div.hero-section {
    padding: 10rem 10px;
  }

  div.hero-content-heading h3 {
    font-size: 1.8rem;
  }

  div.hero-content-btn a {
    font-size: 1rem;
  }
  /* sub hero section */
  div.hero-background {
    padding: 10rem 2rem;
    flex-direction: column;
  }

  div.background {
    width: calc(100vw - 2rem);
    height: 480px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
  }

  div.background h4 {
    padding: 2.3rem;
  }

  div.background p {
    padding-left: 0rem;
    font-size: 0.85rem;
  }

  div.hero-background-pos {
    position: relative;
    margin-top: 20px;
    left: 0px;
  }
  /* snap */

  div.snapshot-box-content {
    flex-direction: column;
  }
  /* footer */
  div.footer-content h4 {
    font-size: 1.3rem;
  }

  div.footer-content p {
    font-size: 0.75rem;
  }

  div.footer-input {
    flex-direction: column;
  }

  input[type="text"] {
    margin-bottom: 10px;
    width: 90%;
    font-size: 0.75rem;
  }

  input[type="email"] {
    width: 90%;
    font-size: 0.75rem;
  }

  div.footer-textarea {
    margin-left: -6px;
  }

  textarea {
    width: 90%;
  }
}
@media only screen and (min-width: 601px) {
  /* top navigation*/
  div.nav-bar {
    padding: 10px 10px;
  }

  div.logo {
    font-size: 1.3rem;
  }

  ul li {
    margin: 0 0.5vw;
    font-size: 1rem;
  }

  ul li a:hover {
    padding: 0.45rem;
  }
  /* hero section */
  div.hero-section {
    padding: 10rem 5rem;
  }

  div.hero-content-heading h3 {
    font-size: 1.8rem;
  }

  div.hero-content-btn a {
    font-size: 1rem;
  }
  /* sub hero section */

  div.hero-background {
    flex-direction: column;
  }

  div.background {
    width: calc(100vw - 10rem);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  div.hero-background-pos {
    position: relative;
    margin-top: 20px;
    left: 0px;
  }
  /* snapshot */

  div.snapshot-box {
    padding: 4rem 2rem;
  }

  div.snapshot-box-content {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
  }
}
@media only screen and (min-width: 768px) {
  /* hero section */
  div.hero-section {
    padding: 10rem 7rem;
  }

  /* sub hero section */

  div.background {
    width: 550px;
    height: 220px;
  }

  /* From snapshot */
  div.snapshot-box {
    padding: 4rem 6rem;
  }

  div.snapshot-box-content {
    flex-wrap: wrap;
    justify-content: center;
  }
}
@media only screen and (min-width: 1200px) {
  div.nav-bar {
    display: flex;
    justify-content: space-between;
    padding: 1rem 6rem;
    width: inherit;
    background: #304353;
  }

  div.logo {
    font-size: 1.5rem;
    color: #bcc3c7;
  }

  ul.nav-links {
    display: flex;
    margin: 0;
    padding: 0;
  }

  ul li {
    margin: 0 2vw;
    list-style: none;
    font-size: 1.1rem;
  }

  ul li a {
    text-decoration: none;
    color: #88949b;
    padding: 0.5vw;
  }

  ul li a:hover {
    color: #304353;
    background: #fff;
    padding: 0.5rem;
  }

  div.hero-section {
    background: #304353;
    padding: 10rem;
  }

  div.hero-content-heading {
    text-align: center;
  }

  div.hero-content-heading h3 {
    font-size: 2rem;
    text-transform: uppercase;
    letter-spacing: 2px;
    font-weight: 300;
    color: #bcc3c7;
  }

  div.hero-content-heading p {
    text-align: center;
    padding-top: 0.7rem;
    color: #88949b;
    font-size: 1rem;
    letter-spacing: 2px;
    font-weight: 300;
  }

  div.hero-content-btn {
    display: flex;
    justify-content: center;
    align-items: center;
    padding-top: 2rem;
  }

  div.hero-content-btn a {
    background: #e44c65;
    text-decoration: none;
    color: #bcc3c7;
    font-size: 0.9rem;
    padding: 10px 30px;
    border-radius: 3px;
    letter-spacing: 2px;
  }

  div.hero-background {
    background: #f0f0f0;
    padding: 10rem;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  div.background {
    background: #fff;
    box-shadow: 2px 2px 15px 0 rgb(135 135 135 / 40%);
    padding: 15px 40px;
    width: 550px;
    height: 220px;
    position: relative;
    display: flex;
  }

  div.background h4 {
    padding: 2rem;
    color: #555657;
    font-size: 1rem;
    letter-spacing: 2px;
    text-transform: uppercase;
  }

  div.background p {
    color: #a6a5aa;
    padding-left: 2rem;
    font-size: 0.8rem;
    letter-spacing: 2px;
  }

  div.hero-background-pos {
    background: #fff;
    width: 140px;
    height: 140px;
    border-radius: 50%;
    box-shadow: 2px 2px 15px 0 rgb(135 135 135 / 40%);
  }
}

